# tap-facebook

./: .env.template  .gitignore  .pre-commit-config.yaml  README.md  meltano.yml  mypy.ini  nekt.config.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: ci_workflow.yml  constraints.txt  release.yaml
.secrets/: .gitignore
scripts/: diagnose_permissions.py
tap_facebook/: __init__.py  api_helper.py  auth.py  client.py  streams.py  tap.py
tap_facebook/schemas/: adcampaignissuesinfo.json  adconversion.json  adgroupissuesinfo.json  adhistory.json  adrecommendation.json  ads.json  ads_insights.json  adsetattribution.json  adsethistory.json  adsets.json  campaignhistory.json  campaignlabel.json  campaigns.json  insight.json
tap_facebook/streams/: __init__.py  activities.py  ad_accounts.py  ad_images.py  ad_insights.py  ad_insights_dma.py  ad_labels.py  ad_videos.py  ads.py  adsets.py  campaign.py  creative.py  custom_audiences.py  custom_conversions.py
tap_facebook/tests/: .env.template  test_core.py
tests/: .env.template  __init__.py  test_core.py
