[tool.poetry]
name = "meltano-tap-facebook"
version = "0.0.0"
description = "`tap-facebook` is a Singer tap for facebook, built with the Meltano SDK for Singer Taps."
authors = ["Meltano <hello@meltano.com>"]
keywords = [
    "ELT",
    "facebook",
]
license = "Elastic-2.0"
packages = [
    { include = "tap_facebook" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
requests = "~=2.31.0"
facebook-business = "^19.0.0"
nekt-singer-sdk = {git = "https://github.com/nektcom/singer-sdk.git"}
pendulum = "^3.1.0"
[tool.poetry.dev-dependencies]
pytest = ">=7.4.1"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
plugins = "sqlmypy"

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
ignore = [
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-facebook = 'tap_facebook.tap:TapFacebook.cli'
